test_programs/compile_failure/static_assert_dynamic_array_len/src/main.nr
fn main(
    dynamic_one: Field, // == 1
) {
    std::static_assert([1, 2, dynamic_one].len() == 4, "");
}
